--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
 body {
+    background-color: black;
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
 }
 
-header {
+header, footer {
     background-color: black;
     color: white;
     padding: 20px;
@@ -25,25 +26,50 @@ nav ul li {
 nav ul li a {
     color: red;
     text-decoration: none;
+    font-weight: bold;
 }
 
 nav ul li a:hover {
     background-color: red;
     color: black;
+    text-decoration: underline;
 }
 
 section {
     background-color: red;
     padding: 20px;
     margin: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 footer {
     background-color: black;
     color: red;
     text-align: center;
-    padding: 0;
+    padding: 0px;
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    header {
+        padding: 10px;
+    }
+
+    nav ul li {
+        display: block;
+        text-align: center;
+        margin: 5px 0;
+    }
+
+    section {
+        padding: 10px;
+        margin: 10px;
+    }
+
+    footer {
+        padding: 0px;
+    }
 }
