--- a/css/styles.css
+++ b/css/styles.css
@@ -73,3 +73,23 @@ footer {
         padding: 0px;
     }
 }
+
+.project-gallery {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.project {
+    border: 1px solid black;
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.project-details {
+    margin-top: 10px;
+    color: #555;
+}
+
