--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,42 @@ footer {
     color: #555;
 }
 
+.error-message {
+    color: purple;
+    display: none;
+}
+
+#contact {
+    padding: 20px;
+    margin-bottom: 75px;
+}
+
+#contact form {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+#contact input {
+    width: 15%;
+    height: 50%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#contact textarea {
+    width: 35%;
+}
+
+#contact button {
+    width: 15%;
+    padding: 10px;
+    background-color: blue;
+    color: white;
+    border: none;
+    border-radius: 4px;
+}
+
+#contact button:hover {
+    background-color: darkblue;
+}
